# public-nuget-packages

./: .gitignore  .releaserc.yml  CHANGELOG.md  README.md  package-lock.json  packages.yml  pyproject.toml
.github/workflows/: release.yml  sync-nuget.yml  upgrade-packages.yml
nuget_syncer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: sync_devops.sh  sync_nuget.py
terraform/repo-config/: main.tf  outputs.tf  providers.tf  variables.tf
